force-app/main/default/objects/Work_Front__c/Work_Front__c.object-meta.xml
<CustomObject>
    <description>Work Front readiness tracking â€” controls release of construction fronts to field teams (datasheet Â§4.7).</description>
    <label>Work Front</label>
    <nameField>
        <displayFormat>WF-{00000}</displayFormat>
        <label>Work Front Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Fronts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>