force-app/main/default/objects/Work_Front__c/fields/Blockers__c.field-meta.xml
<CustomField>
    <fullName>Blockers__c</fullName>
    <label>Blockers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>