force-app/main/default/objects/Work_Front__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Work Fronts</relationshipLabel>
    <relationshipName>Work_Fronts</relationshipName>
    <type>Lookup</type>
</CustomField>