force-app/main/default/objects/Work_Front__c/fields/Readiness_Status__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Status__c</fullName>
    <label>Readiness Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
                <default>true</default>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>