force-app/main/default/objects/Work_Front__c/fields/Work_Package__c.field-meta.xml
<CustomField>
    <fullName>Work_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Package</label>
    <referenceTo>Work_Package__c</referenceTo>
    <relationshipLabel>Work Fronts</relationshipLabel>
    <relationshipName>Work_Fronts</relationshipName>
    <type>Lookup</type>
</CustomField>